[package]
name = "rust-flock-of-boids"
description  = "A showdown between bevy, tetra, amethyst, and piston"
version = "0.1.0"
authors = ["Cameron Manavian <cameron.manavian@gmail.com>"]
edition = "2018"

[dependencies]
bevy = "0.4"
piston_window = "0.117.0"
rand = "0.8.2"
shuffle = "0.1.7"

[[bin]]
name = "with_piston"
path = "src/with_piston.rs"