[package]
name = "LSM-Colab-Swarm-Learning"
description  = "A fork of camsjams/rust-flock-of-boids designed to replicate an existing swarm and target problem written in java."
version = "0.1.0"
authors = ["Samuel Hardy <samuelchadhardy@gmail.com>", "Cameron Manavian <cameron.manavian@gmail.com>"]
edition = "2018"

[dependencies]
piston_window = "0.117.0"
rand = "0.8.2"
shuffle = "0.1.7"

[[bin]]
name = "with_piston"
path = "src/with_piston.rs"